--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!-- 
+1. В footer добавить ссылку на гитхаб автора работы, год создания приложения, логотип курса со ссылкой на курс. может вести на курс Stage0.
+2. Добавить ссылку на свою страничку -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
