feat: add footer and style

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="main main-container">
         <div class="container main-container">
         <section class="section section-profile" id="profile">
-            <img src="assets/img/image.jpg" alt="my photo" class="section-profile-logo">
+            <img src="assets/img/avatar.jpg" alt="my photo" class="section-profile-logo">
         <div class="section-profile-title">
             <h1 class="section-title main-title">Dmitriy Vlodarchik</h1>
             <h3 class="section-subtitle">Junior Front-End Developer</h3>
@@ -127,5 +127,12 @@ alert( result ); // 7</code>
     </section>
     </div>
 </main>
+<footer class="footer">
+    <div class="container footer-container">
+        <div class="year">© 2022</div>
+            <a href="https://github.com/dimon39" class="github"></a>
+        <a href="https://rs.school/js/" class="rsschool"></a>
+    </div>
+</footer>
 </body>
 </html>
